[package]
name = "solana-qos-common"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ahash = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
derivative = { workspace = true }
libc = { workspace = true }
ordered-float = { workspace = true, features = ["bytemuck"] }
xxhash-rust = { workspace = true }
