[package]
name = "mock-tx-engine"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
demo = []

[dependencies]
bincode = { workspace = true }
mpsc = { workspace = true }
que = { workspace  = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rtrb = { workspace = true }
solana-qos-common = { workspace = true }
solana-qos-core = { workspace = true }
solana-sdk = { workspace = true }
timer = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
agave-transaction-view = { workspace = true }
