[package]
name = "ipc-demo"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
color-eyre = { workspace = true }
que = { workspace = true }
ratatui = { workspace = true }
solana-qos-common = { workspace = true }
solana-qos-internal-common = { workspace = true }
timer = { workspace = true }
