[package]
name = "solana-qos-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
demo = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agave-transaction-view = { workspace = true }
likely_stable = { workspace = true }
log = { workspace = true }
qos-lru = { workspace = true }
qos-minmax = { workspace = true }
qos-model = { workspace = true }
que = { workspace = true }
solana-qos-common = { workspace = true }
solana-qos-internal-common = { workspace = true }
solana-sdk = { workspace = true }
timer = { workspace = true }

[dev-dependencies]
bincode = "1.3.3"
